Design-splution-finished

--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
         <section>
             <div class="container">
                 <div class="amy-box">
-                    <img src="./images/desktop/Group 36.png" alt="" />
+                    <img class="amy-desktop" src="./images/desktop/Group 36.png" alt="" />
+                    <img class="amy-tablet" src="./images/tablet/Amyphoto.png" alt="" />
+                    <img class="amy-mobile" src="./images/mobile/Amymobile.png" alt="" />
                     <div class="amy-info">
                         <h3>I’m Amy, and I’d love to work on your next project</h3>
                         <p>
