Design-solution-project

--- a/index.html
+++ b/index.html
@@ -1,123 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./css/home.css" />
-  </head>
+</head>
 
-  <body>
+<body>
     <header>
-      <div class="container">
-        <div class="header-naviget">
-          <a href="./index.html"
-            ><img src="./images/desktop/Group 20.svg" alt=""
-          /></a>
-          <a class="btn" href="#">Free Consultation</a>
+        <div class="container">
+            <div class="header-naviget">
+                <a href="./index.html"><img src="./images/desktop/Group 20.svg" alt="" /></a>
+                <a class="btn" href="#">Free Consultation</a>
+            </div>
         </div>
-      </div>
-      <div class="container">
-        <div class="solution">
-          <h1>Design solutions made easy</h1>
-          <p>
-            With over ten years of experience in various design disciplines, I’m
-            your one-stop shop for your design needs.
-          </p>
+        <div class="container">
+            <div class="solution">
+                <h1>Design solutions made easy</h1>
+                <p>
+                    With over ten years of experience in various design disciplines, I’m your one-stop shop for your design needs.
+                </p>
+            </div>
         </div>
-      </div>
     </header>
     <main>
-      <section>
-        <div class="container">
-          <div class="hero-content">
-            <div class="hero-box graphic">
-              <h3>Graphic Design</h3>
+        <section>
+            <div class="container">
+                <div class="hero-content">
+                    <div class="hero-box graphic">
+                        <h3>Graphic Design</h3>
+                    </div>
+                    <div class="hero-box uiux">
+                        <h3>UI/UX</h3>
+                    </div>
+                    <div class="hero-box app">
+                        <h3>Apps</h3>
+                    </div>
+                    <div class="hero-box photo">
+                        <h3>Photography</h3>
+                    </div>
+                    <div class="hero-box illustrate">
+                        <h3>Illustrations</h3>
+                    </div>
+                    <div class="hero-box motion">
+                        <h3>Motion Graphics</h3>
+                    </div>
+                </div>
             </div>
-            <div class="hero-box uiux">
-              <h3>UI/UX</h3>
+        </section>
+        <section>
+            <div class="container">
+                <div class="amy-box">
+                    <img class="amy-desktop" src="./images/desktop/Group 36.png" alt="" />
+                    <img class="amy-tablet" src="./images/tablet/Amyphoto.png" alt="" />
+                    <img class="amy-mobile" src="./images/mobile/Amymobile.png" alt="" />
+                    <div class="amy-info">
+                        <h3>I’m Amy, and I’d love to work on your next project</h3>
+                        <p>
+                            I love working with others to create beautiful design solutions. I’ve designed everything from brand illustrations to complete mobile apps. I’m also handy with a camera!
+                        </p>
+                        <a class="btn-light" href="">Free Consultation</a>
+                    </div>
+                </div>
             </div>
-            <div class="hero-box app">
-              <h3>Apps</h3>
+        </section>
+        <section>
+            <div class="mywork">
+                <h3>My Work</h3>
+                <div class="content-box">
+                    <img class="one" src="./images/desktop/Bitmap (6).png" alt="" />
+                    <img class="two" src="./images/desktop/Bitmap (7).png" alt="" />
+                    <img class="three" src="./images/desktop/Bitmap (8).png" alt="" />
+                    <img src="./images/desktop/Bitmap Copy 2.png" alt="" />
+                    <img src="./images/desktop/Bitmap Copy.png" alt="" />
+                </div>
             </div>
-            <div class="hero-box photo">
-              <h3>Photography</h3>
-            </div>
-            <div class="hero-box illustrate">
-              <h3>Illustrations</h3>
-            </div>
-            <div class="hero-box motion">
-              <h3>Motion Graphics</h3>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section>
-        <div class="container">
-          <div class="amy-box">
-            <img
-              class="amy-desktop"
-              src="./images/desktop/Group 36.png"
-              alt=""
-            />
-            <img class="amy-tablet" src="./images/tablet/Amyphoto.png" alt="" />
-            <img
-              class="amy-mobile"
-              src="./images/mobile/Amymobile.png"
-              alt=""
-            />
-            <div class="amy-info">
-              <h3>I’m Amy, and I’d love to work on your next project</h3>
-              <p>
-                I love working with others to create beautiful design solutions.
-                I’ve designed everything from brand illustrations to complete
-                mobile apps. I’m also handy with a camera!
-              </p>
-              <a class="btn-light" href="">Free Consultation</a>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section>
-        <div class="mywork">
-          <h3>My Work</h3>
-          <div class="content-box">
-            <img class="one" src="./images/desktop/Bitmap (6).png" alt="" />
-            <img class="two" src="./images/desktop/Bitmap (7).png" alt="" />
-            <img class="three" src="./images/desktop/Bitmap (8).png" alt="" />
-            <img src="./images/desktop/Bitmap Copy 2.png" alt="" />
-            <img src="./images/desktop/Bitmap Copy.png" alt="" />
-          </div>
-          <div class="scroll">
-            <a href="#"><img src="./images/desktop/Shape-left.png" alt="" /></a>
+            <div class="container">
+                <div class="scroll">
+                    <a href="#"><img src="./images/desktop/Shape-left.png" alt="" /></a>
 
-            <a href="#"
-              ><img src="./images/desktop/Shape right.png" alt=""
-            /></a>
-          </div>
-        </div>
-      </section>
+                    <a href="#"><img src="./images/desktop/Shape right.png" alt="" /></a>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
-      <div class="container">
-        <div class="footer-main">
-          <div class="footer-info">
-            <h3>Book a call with me</h3>
-            <p>
-              I’d love to have a chat to see how I can help you. The best first
-              step is for us to discuss your project during a free consultation.
-              Then we can move forward from there.
-            </p>
-          </div>
-          <a class="btn-light" href="#">Free Consultation</a>
+        <div class="container">
+            <div class="footer-main">
+                <div class="footer-info">
+                    <h3>Book a call with me</h3>
+                    <p>
+                        I’d love to have a chat to see how I can help you. The best first step is for us to discuss your project during a free consultation. Then we can move forward from there.
+                    </p>
+                </div>
+                <a class="btn-light" href="#">Free Consultation</a>
+            </div>
+            <div class="header-naviget">
+                <a href="./index.html"><img src="./images/desktop/Group 20.svg" alt="" /></a>
+                <a class="btn" href="#">Free Consultation</a>
+            </div>
         </div>
-        <div class="header-naviget">
-          <a href="./index.html"
-            ><img src="./images/desktop/Group 20.svg" alt=""
-          /></a>
-          <a class="btn" href="#">Free Consultation</a>
-        </div>
-      </div>
     </footer>
-  </body>
+</body>
+
 </html>
